--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 node_modules
 .env
+telegram-gemi-bot-firebase-adminsdk-ni8ej-f9ed8c5c35.json
+./telegram-gemi-bot-firebase-adminsdk-ni8ej-f9ed8c5c35.json
