--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@ node_modules
 .env
 telegram-gemi-bot-firebase-adminsdk-ni8ej-f9ed8c5c35.json
 ./telegram-gemi-bot-firebase-adminsdk-ni8ej-f9ed8c5c35.json
+
+BasicTgBotFromOldIndexJs.js
+server.js
