--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.2.0",
     "mongoose": "^8.4.5",
+    "mysql": "^2.18.1",
     "nodemon": "^3.1.4",
     "telegraf": "^4.16.3",
     "uuid": "^10.0.0"
