--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase": "^10.12.3",
     "firebase-admin": "^12.2.0",
     "mongoose": "^8.4.5",
     "mysql": "^2.18.1",
